fixed toggle contrast error

--- a/chamber/styles/b_small_foundation.css
+++ b/chamber/styles/b_small_foundation.css
@@ -71,7 +71,7 @@ header #toggle
 {
     display: block;
     background-color: #b4a28f;
-    color: #1a62a3;
+    color: #0c3558;
     border: none;
     font-size: 200%;
     grid-column: 12/13;
